config/deployment.flame.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'flame'
  labels:
    app: 'flame'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'flame'
  template:
    metadata:
      labels:
        app: 'flame'
    spec:
      containers:
        - name: 'flame'
          image: 'pawelmalak/flame:multiarch'
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 5005
              protocol: 'TCP'
          volumeMounts:
            - mountPath: '/app/data'
              name: 'flame-config'
          livenessProbe:
            httpGet:
              port: 5005
              path: '/'
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            terminationGracePeriodSeconds: 30

      volumes:
        - name: 'flame-config'
          emptyDir: {}

---

apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'flame'
  labels:
    app: 'flame'
spec:
  ports:
    - port: 5005
      protocol: 'TCP'
      targetPort: 5005
  selector:
    app: 'flame'
